# samp-discord-connector

./: CMakeLists.txt  README.md  pawn.json
.github/workflows/: Release Build.yml  build.yml  release-build.yml  release.yml  temp-linux.yml
libs/samp-log-core/: CMakeLists.txt
libs/samp-log-core/src/: CMakeLists.txt
src/: CMakeLists.txt  Logger.hpp  SampConfigReader.cpp  SampConfigReader.hpp  User.cpp  WebSocket.cpp  WebSocket.hpp  main.cpp
src/logger/: AmxDebugManager.cpp  AmxDebugManager.hpp  Api.cpp  Api.hpp  LogConfig.hpp  LogManager.hpp  LogRotationManager.cpp  LogRotationManager.hpp  Logger.hpp  SampConfigReader.hpp  utils.hpp
src/logger/amx/: amxdbg.c  amxdbg.h
